--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -20,11 +20,12 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "lodash":"^4.17.4"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-preset-node6": "^11.0.0",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-stage-1": "^6.24.1",
     "chai": "^4.0.2",
     "eslint": "^3.19.0",
